# pydanclick

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml  on-merge-main.yml
api_reference/: index.html
contributing/: index.html
docs/: api_reference.md  contributing.md  index.md  modules.md
docs/examples/: complex.md  complex_types.md  known_types.md  nested.md  reuse_models.md  simple.md
examples/: complex.py  complex_annotated.py  complex_mixed.py  complex_model_config.py  complex_types.py  known_types.py  nested.py  reuse_models.py  simple.py
examples/complex/: index.html
examples/complex_types/: index.html
examples/nested/: index.html
examples/simple/: index.html
pydanclick/: __init__.py  command.py  main.py  types.py  utils.py
pydanclick/model/: __init__.py  annotations.py  config.py  docstrings.py  field_collection.py  field_conversion.py  known_types.py  model_conversion.py  type_conversion.py  validation.py
search/: search_index.json
tests/: base_models.py  conftest.py  test_annotations.py  test_base_settings.py  test_command.py  test_config.py  test_docstrings.py  test_examples.py  test_field_collection.py  test_field_conversion.py  test_foo.py  test_main.py  test_type_conversion.py  test_validation.py
