[project]
name = "pydanclick"
version = "0.5.1"
description = "Use Pydantic models as Click options"
authors = [
    {name = "Félix Martel", email = "felix.martel@polytechnique.edu>"},
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

[project.urls]
Repository = "https://github.com/felix-martel/pydanclick.git"
Documentation = "https://felix-martel.github.io/pydanclick/"
Issues = "https://github.com/felix-martel/pydanclick/issues"

[tool.poetry]
packages = [
  {include = "pydanclick"}
]

[tool.poetry.dependencies]
pydantic = "^2.6.1"
click = "^8.1.7"
typing-extensions = "^4.9.0"
annotated-types = "^0.6.0"
pydantic-core = "^2.16.2"
griffe = {version = ">=1.0,<=1.4.0", optional = true} # Griffe >1.4.0 doesn't support Python 3.8

[project.optional-dependencies]
griffe = ["griffe"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
griffe2md = "^1.0.0"
black = "^24.2.0"
pygments = "^2.17.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = "^0.26"
mkdocstrings-python = ">=1.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["pydanclick"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "False"
show_error_codes = "True"
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Long messages in exception
    "TRY003",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pydanclick"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.deptry.per_rule_ignores]
DEP003 = ["griffe"]
DEP004 = ["griffe"]
